@@ -9,6 +9,7 @@ EXTRAS_REQUIRE = {
     "pyqtgraph": ["pyqtgraph"],
     "matplotlib": ["matplotlib"],
     "pyside2": ["PySide2"],
+    "pyside6": ["PySide6"],
     "pyqt5": ["PyQt5"],
     "smithplot": ["matplotlib", "pysmithplot-3.10"],
     "develop": ["pylint", "black"],
@@ -56,7 +57,6 @@ setuptools.setup(
         "pint",
         "pyyaml",
         "more_itertools",
-        "colormath",
         "semver",
         "verilogae>=0.9b4",
         "h5py",
