@@ -19,6 +19,7 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 - DutNgspice: Added native support for VA-modeled devices using OpenVAF
 - DutView: save_db now allows saving only some sweep_keys in case of separate databases
 - SweepDefTransSinus and SweepDefTransRamp: 2 different transient signal sweepdefs
+- PySide6 as an option to replace PySide2 in the long run
 
 ### Changed
 
